--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,11 @@ body{
 }
 
 #tasklist::-webkit-scrollbar {
-  display: none;
+  background-color: transparent;
+  height: 6px;
+}
+
+#tasklist::-webkit-scrollbar-thumb{
+  background-color: rgb(143 , 143, 143);
+  border-radius: 50px;
 }
